# nix-ns

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml.example  improve.md
.claude/: settings.local.json
examples/: config.toml  usage.sh
src/: lib.rs  main.rs  security.rs
tests/: integration_tests.rs  source_config_test.rs
