[package]
name = "nix-ns"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
caps = "0.5"
clap = { version = "4.5.40", features = ["derive", "env"] }
libc = "0.2"
nix = { version = "0.30.1", features = ["mount", "sched", "user", "fs"] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.20.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
