[package]
name = "nix-ns"
version = "0.1.0"
edition = "2021"
description = "Creates a mount namespace and bind mounts a directory to /nix"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/nix-ns"
keywords = ["nix", "mount", "namespace", "linux"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
nix = { version = "0.30", features = ["mount", "sched", "user"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
